--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pulumiverse/gandi",
-    "version": "${VERSION}",
+    "version": "2.0.0-alpha.0+dev",
     "description": "A Pulumi package for creating and managing gandi cloud resources.",
     "keywords": [
         "pulumi",
@@ -24,6 +24,7 @@
     "pulumi": {
         "resource": true,
         "name": "gandi",
+        "version": "2.0.0-alpha.0+dev",
         "server": "github://api.github.com/pulumiverse"
     }
 }
