--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@pulumiverse/gandi",
-    "version": "${VERSION}",
+    "version": "2.0.0-alpha.0+dev",
     "description": "A Pulumi package for creating and managing gandi cloud resources.",
     "keywords": [
         "pulumi",
@@ -14,16 +14,16 @@
         "build": "tsc"
     },
     "dependencies": {
-        "@pulumi/pulumi": "^3.0.0"
+        "@pulumi/pulumi": "^3.142.0"
     },
     "devDependencies": {
-        "@types/mime": "^2.0.0",
-        "@types/node": "^10.0.0",
+        "@types/node": "^18",
         "typescript": "^4.3.5"
     },
     "pulumi": {
         "resource": true,
         "name": "gandi",
+        "version": "2.0.0-alpha.0+dev",
         "server": "github://api.github.com/pulumiverse"
     }
 }
