--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,6 +48,8 @@ jobs:
       env:
         MISE_ENV: test
       with:
+        # Latest working version. See https://github.com/jdx/mise/discussions/6781
+        version: 2025.10.16
         github_token: ${{ secrets.GITHUB_TOKEN }}
         cache_key: "mise-{{platform}}-{{file_hash}}"
         # also save this cache since we are using a different mise env.
@@ -59,7 +61,7 @@ jobs:
     - name: Download bin
       uses: ./.github/actions/download-provider
     - name: Setup Go Cache
-      uses: actions/setup-go@d35c59abb061a4a6fb18e82ac0862c26744d6ab5 # v5
+      uses: actions/setup-go@44694675825211faa026b3c33043df3e48a5fa00 # v6
       if: matrix.language == 'go' || contains(matrix.language, 'go')
       with:
         cache-dependency-path: |
@@ -97,8 +99,9 @@ jobs:
       fail-fast: false
       matrix:
         language:
-        - dotnet
-        - go
         - nodejs
         - python
+        - dotnet
+        - go
+        - java
         testTarget: [local]
